--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Yuriy Koziy",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   }
 }
